--- a/WebAppWeather/wwwroot/css/style.css
+++ b/WebAppWeather/wwwroot/css/style.css
@@ -28,16 +28,16 @@ a {
     color: #6d757e;
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     height: 15px;
 }
 
-::-webkit-scrollbar-track{
-    box-shadow: 0 0 2px rgba( 0, 0, 0, 0.25) inset;
-    border-radius: 8px; 
+::-webkit-scrollbar-track {
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.25) inset;
+    border-radius: 8px;
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
     background: var(--colorT);
     border-radius: 8px;
 }
@@ -53,6 +53,10 @@ a {
     max-width: 1200px;
     margin: 0px auto;
     padding: 0px 15px;
+}
+
+header {
+    z-index: 10;
 }
 
 .header-row {
@@ -114,26 +118,26 @@ a {
     width: 0px;
 }
 
-.content-group{
+.content-group {
     padding: 20px;
-    box-shadow: 2px 5px 25px -3px rgba( 180, 180, 180, 0.3);
+    box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.3);
     border-radius: 20px;
 }
 
-.group-title{
+.group-title {
     font-weight: normal;
     font-size: 32px;
     margin-bottom: 20px;
 }
 
-.group-cards{
+.group-cards {
     display: flex;
     justify-content: space-between;
     overflow-x: auto;
 }
 
 
-.card{
+.card {
     min-width: 200px;
     border-radius: 20px;
     height: 250px;
@@ -142,12 +146,12 @@ a {
     margin: 20px 5px;
 }
 
-.name-city{
+.name-city {
     font-weight: normal;
     font-size: 20px;
 }
 
-.city-card{
+.city-card {
     max-width: 200px;
     position: relative;
     justify-content: space-between;
@@ -158,56 +162,60 @@ a {
     flex-direction: column;
 }
 
-.weather-icon{
+.city-card:hover {
+    cursor: pointer;
+}
+
+.weather-icon {
     width: 70px;
     height: 70px;
 }
 
-.temperature{
+.temperature {
     font-size: 25px;
 }
 
-.type-weather{
+.type-weather {
     text-align: center;
 }
 
-.additionally{
+.additionally {
     color: var(--colorA);
 }
 
-.big-icon{
+.big-icon {
     width: 119px;
     height: 119px;
 }
 
-.weather-box-column{
+.weather-box-column {
     padding-right: 67px;
     display: flex;
     flex-direction: column;
 }
 
-.weather-box-column .temperature{
+.weather-box-column .temperature {
     font-style: normal;
     font-weight: 500;
     font-size: 96px;
     color: var(--colorT);
 }
 
-.weather-box-row{
+.weather-box-row {
     display: flex;
 }
 
-.weather-box-row .weather-icon{
+.weather-box-row .weather-icon {
     margin-top: 26px;
 }
 
-.date{
+.date {
     font-weight: 400;
     font-size: 40px;
     line-height: 49px;
 }
 
-.weather-addition{
+.weather-addition {
     padding-top: 31px;
     font-weight: 400;
     font-size: 25px;
@@ -215,19 +223,181 @@ a {
     flex-direction: column;
 }
 
-.row{
+.row {
     display: flex;
     justify-content: space-between;
 }
 
-.this{
+.this {
     margin-right: 50px;
 }
 
-.this-info{
-    
+.this-info {
+    display: flex;
+    align-items: center;
+    flex: auto;
+    position: relative;
 }
 
-footer{
+.info-bg{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.info-bg img{
+    max-width: 420px;
+    opacity: 0.6;
+}
+
+.item-info{
+    position: relative;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.info-parameter {
+    display: flex;
+    align-items: center;
+}
+
+.title-info{
+    padding: 20px;
+}
+
+.icon-info{
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
+    box-shadow: 1px 4px 10px -1px rgba(71, 147, 255, 0.2);
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-link {
+    cursor: pointer;
+}
+
+div>article>* {
+    pointer-events: none;
+}
+
+a.nav-link>* {
+    pointer-events: none;
+}
+
+.preloader{
+    z-index: 9;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+}
+
+.preloader-loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.preloader-hide {
+    animation: hidePreloader 0.6s;
+}
+
+@keyframes hidePreloader {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes ldio-8gofurdxidl {
+    0% {
+        transform: rotate(0)
+    }
+
+    100% {
+        transform: rotate(360deg)
+    }
+}
+
+.ldio-8gofurdxidl div {
+    box-sizing: border-box !important
+}
+
+.ldio-8gofurdxidl>div {
+    position: absolute;
+    width: 144px;
+    height: 144px;
+    top: 28px;
+    left: 28px;
+    border-radius: 50%;
+    border: 16px solid #000;
+    border-color: #4593f9 transparent #4593f9 transparent;
+    animation: ldio-8gofurdxidl 1s linear infinite;
+}
+
+.ldio-8gofurdxidl>div:nth-child(2) {
+    border-color: transparent
+}
+
+.ldio-8gofurdxidl>div:nth-child(2) div {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: rotate(45deg);
+}
+
+.ldio-8gofurdxidl>div:nth-child(2) div:before,
+.ldio-8gofurdxidl>div:nth-child(2) div:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    top: -16px;
+    left: 48px;
+    background: #4593f9;
+    border-radius: 50%;
+    box-shadow: 0 128px 0 0 #4593f9;
+}
+
+.ldio-8gofurdxidl>div:nth-child(2) div:after {
+    left: -16px;
+    top: 48px;
+    box-shadow: 128px 0 0 0 #4593f9;
+}
+
+.loadingio-spinner-dual-ring-x2mkp0y4etg {
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    overflow: hidden;
+    background: none;
+}
+
+.ldio-8gofurdxidl {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: translateZ(0) scale(1);
+    backface-visibility: hidden;
+    transform-origin: 0 0;
+    /* see note above */
+}
+
+.ldio-8gofurdxidl div {
+    box-sizing: content-box;
+}
+
+footer {
     margin-top: 20px;
 }
